--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "vendor",
-    "short_name": "vendor",
+    "name": "mira_v2",
+    "short_name": "mira_v2",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
